[package]
name = "jump_game"
version = "0.1.0"
authors = ["Catherine Zeng <yczeng@mit.edu>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "example_client"
path = "src/example_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
websocket = "0.24.0"